get cards api fix
