# CardService/internal/router/router.go
@@ -43,7 +43,7 @@ func NewRouter(cfg *config.Config, logger *logrus.Logger, service service.CardSe
 	}
 
 	muxRouter.HandleFunc("/create", r.createCardHandler).Methods("POST")
-	muxRouter.HandleFunc("/show", r.showCardsHandler).Methods("GET")
+	muxRouter.HandleFunc("/show/{accountID}", r.showCardsHandler).Methods("GET")
 
 	return r
 }
