# CardService/internal/router/show_cards.go
@@ -3,31 +3,18 @@ package router
 import (
 	"context"
 	"encoding/json"
+	"github.com/gorilla/mux"
 	"net/http"
 )
 
-type showCardsRequest struct {
-	AccountID string `json:"account_id"`
-}
-
 func (r *Router) showCardsHandler(w http.ResponseWriter, req *http.Request) {
-	var reqBody showCardsRequest
-	if err := json.NewDecoder(req.Body).Decode(&reqBody); err != nil {
-		r.logger.Debugf("show cards: json decode error: %s", err)
-		http.Error(w, "Invalid request", http.StatusBadRequest)
-		return
-	}
-
-	if reqBody.AccountID == "" {
-		r.logger.Debugf("show cards: not enough parameters: %v", reqBody)
-		http.Error(w, "Invalid request", http.StatusBadRequest)
-		return
-	}
+	vars := mux.Vars(req)
+	accountID := vars["accountID"]
 
 	ctx, cancel := context.WithTimeout(req.Context(), DefaultTimeout)
 	defer cancel()
 
-	isActive, err := r.banking.AccountIsActive(ctx, reqBody.AccountID)
+	isActive, err := r.banking.AccountIsActive(ctx, accountID)
 	if err != nil {
 		r.logger.WithError(err).Error("could not validate account")
 		http.Error(w, err.Error(), http.StatusBadRequest)
@@ -40,7 +27,7 @@ func (r *Router) showCardsHandler(w http.ResponseWriter, req *http.Request) {
 		return
 	}
 
-	cards, err := r.service.GetCardsByAccount(ctx, reqBody.AccountID)
+	cards, err := r.service.GetCardsByAccount(ctx, accountID)
 	if err != nil {
 		r.logger.WithError(err).Error("could not get cards")
 		http.Error(w, err.Error(), http.StatusInternalServerError)
